[gd_scene load_steps=28 format=3 uid="uid://bmsaybwhiw00v"]

[ext_resource type="Script" path="res://loaders/CharacterBody2D.gd" id="1_f5aau"]
[ext_resource type="Texture2D" uid="uid://y0ueythsp15o" path="res://Assets/Sprites/Characters/character_main_anim.png" id="2_l7hmq"]
[ext_resource type="Texture2D" uid="uid://bb1bpafpa2k1m" path="res://Assets/Sprites/Characters/jump_fall_animation.png" id="3_wjeug"]
[ext_resource type="Texture2D" uid="uid://dj24g2fg8rukw" path="res://Assets/Sprites/Environment/Background.png" id="4_jg6si"]
[ext_resource type="AudioStream" uid="uid://bylcsukvw315l" path="res://Assets/music/sfx/steps1.wav" id="4_ytn50"]
[ext_resource type="AudioStream" uid="uid://cpuyxgrqrqisj" path="res://Assets/music/sfx/steps2.wav" id="5_dn4du"]
[ext_resource type="StyleBox" uid="uid://tq6e8gy4hunb" path="res://new_style_box_flat.tres" id="7_plmfh"]
[ext_resource type="Texture2D" uid="uid://dfmph2iy1xc7o" path="res://Assets/Sprites/char_tools/dagger.png" id="8_k8diy"]
[ext_resource type="Texture2D" uid="uid://de73nsqskdq4q" path="res://Assets/Sprites/char_tools/grappling_hook.png" id="9_hlyvf"]

[sub_resource type="AtlasTexture" id="AtlasTexture_yodmo"]
atlas = ExtResource("2_l7hmq")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t4bo3"]
atlas = ExtResource("2_l7hmq")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yi6pj"]
atlas = ExtResource("3_wjeug")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b575l"]
atlas = ExtResource("3_wjeug")
region = Rect2(0, 64, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_fdbm7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yodmo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t4bo3")
}],
"loop": true,
"name": &"default",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yi6pj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b575l")
}],
"loop": true,
"name": &"new_animation",
"speed": 5.0
}]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_yaj48"]
streams_count = 2
stream_0/stream = ExtResource("4_ytn50")
stream_0/weight = 1.0
stream_1/stream = ExtResource("5_dn4du")
stream_1/weight = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2n81c"]
bg_color = Color(0.701961, 0, 0.0862745, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hbxrn"]

[sub_resource type="InputEventKey" id="InputEventKey_hov3u"]
device = -1
keycode = 49
unicode = 49

[sub_resource type="Shortcut" id="Shortcut_3s77h"]
events = [SubResource("InputEventKey_hov3u")]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0h4s7"]

[sub_resource type="InputEventKey" id="InputEventKey_17rhj"]
device = -1
keycode = 50
unicode = 50

[sub_resource type="Shortcut" id="Shortcut_14k8l"]
events = [SubResource("InputEventKey_17rhj")]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7rlce"]

[sub_resource type="InputEventKey" id="InputEventKey_11lvw"]
device = -1
keycode = 51
unicode = 51

[sub_resource type="Shortcut" id="Shortcut_vhkme"]
events = [SubResource("InputEventKey_11lvw")]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wk0c5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kjs31"]
size = Vector2(50, 70)

[node name="character_loader" type="Node2D"]
metadata/_edit_horizontal_guides_ = [0.0]

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(50, 150)
script = ExtResource("1_f5aau")
SPEED = 120
JUMP_VELOCITY = -400
gravity = 800
MAX_FALL_SPEED = 2000

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Player"]
z_index = 10
position = Vector2(1.52588e-05, 7.62939e-06)
sprite_frames = SubResource("SpriteFrames_fdbm7")
frame_progress = 0.405955

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Player"]
stream = SubResource("AudioStreamRandomizer_yaj48")
bus = &"sfx"

[node name="step_sfx" type="Timer" parent="Player"]
wait_time = 0.4
autostart = true

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2(2, 2)
limit_left = 0
limit_bottom = 375
position_smoothing_enabled = true

[node name="ParallaxBackground" type="ParallaxBackground" parent="Player/Camera2D"]

[node name="Sprite2D" type="Sprite2D" parent="Player/Camera2D/ParallaxBackground"]
z_index = -1
position = Vector2(576, 322.515)
scale = Vector2(1.12207, 0.723872)
texture = ExtResource("4_jg6si")

[node name="hud" type="CanvasLayer" parent="Player/Camera2D"]

[node name="ProgressBar" type="ProgressBar" parent="Player/Camera2D/hud"]
offset_left = 4.0
offset_top = 4.0
offset_right = 321.0
offset_bottom = 31.0
theme_override_styles/background = ExtResource("7_plmfh")
theme_override_styles/fill = SubResource("StyleBoxFlat_2n81c")
value = 100.0
show_percentage = false

[node name="Health" type="RichTextLabel" parent="Player/Camera2D/hud/ProgressBar"]
offset_left = 127.0
offset_top = 2.0
offset_right = 181.0
offset_bottom = 25.0
text = "Health"
fit_content = true

[node name="HBoxContainer" type="HBoxContainer" parent="Player/Camera2D/hud"]
offset_left = 9.0
offset_top = 562.0
offset_right = 251.0
offset_bottom = 640.0
alignment = 1

[node name="inv_1" type="Button" parent="Player/Camera2D/hud/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Grappling Hook"
theme_override_styles/focus = SubResource("StyleBoxEmpty_hbxrn")
shortcut = SubResource("Shortcut_3s77h")
icon = ExtResource("9_hlyvf")
expand_icon = true

[node name="inv_2" type="Button" parent="Player/Camera2D/hud/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Throwing Dagger"
theme_override_styles/focus = SubResource("StyleBoxEmpty_0h4s7")
shortcut = SubResource("Shortcut_14k8l")
icon = ExtResource("8_k8diy")
expand_icon = true

[node name="inv_3" type="Button" parent="Player/Camera2D/hud/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/focus = SubResource("StyleBoxEmpty_7rlce")
shortcut = SubResource("Shortcut_vhkme")

[node name="dagger_cooldown" type="Timer" parent="Player/Camera2D/hud"]
wait_time = 1.5

[node name="ground_poly" type="CollisionPolygon2D" parent="Player"]
polygon = PackedVector2Array(-3.99998, -20, -5.99998, -16, -5.99998, -0.999992, -7.99998, 1.00001, -7.99998, 5.00001, -11, 8.00001, -13, 15, -16, 15, -16, 21, 13, 21, 13, 15, 12, 9.00001, 11, 4.00001, 12, -1.99999, 12, -18, 7.00002, -21, 4.00002, -22)

[node name="death colider" type="Area2D" parent="Player"]
collision_layer = 16
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/death colider"]
position = Vector2(0, 22)
shape = SubResource("RectangleShape2D_wk0c5")

[node name="Line2D" type="Line2D" parent="Player"]
visible = false
points = PackedVector2Array(0, 0, 0, 0)
width = 2.0
default_color = Color(0.423529, 0.207843, 0.027451, 1)

[node name="Hook" type="Area2D" parent="Player"]
visible = false
top_level = true
scale = Vector2(0.2, 0.2)
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/Hook"]
position = Vector2(-5.72205e-06, -6.19888e-06)
scale = Vector2(0.999999, 0.999999)
shape = SubResource("RectangleShape2D_kjs31")
disabled = true

[node name="Sprite2D" type="Sprite2D" parent="Player/Hook"]
position = Vector2(2.5, -4.76837e-06)
scale = Vector2(2.96875, 2.8125)
texture = ExtResource("9_hlyvf")

[node name="spawnpoint" type="Marker2D" parent="."]
position = Vector2(50, 150)

[connection signal="tree_entered" from="Player" to="Player" method="_on_tree_entered"]
[connection signal="timeout" from="Player/step_sfx" to="Player" method="_on_step_sfx_timeout"]
[connection signal="pressed" from="Player/Camera2D/hud/HBoxContainer/inv_1" to="Player" method="_on_inv_1_pressed"]
[connection signal="pressed" from="Player/Camera2D/hud/HBoxContainer/inv_2" to="Player" method="_on_inv_2_pressed"]
[connection signal="pressed" from="Player/Camera2D/hud/HBoxContainer/inv_3" to="Player" method="_on_inv_3_pressed"]
[connection signal="timeout" from="Player/Camera2D/hud/dagger_cooldown" to="Player" method="_on_dagger_cooldown_timeout"]
[connection signal="body_entered" from="Player/death colider" to="Player" method="_on_death_colider_body_entered"]
[connection signal="body_entered" from="Player/Hook" to="Player" method="_on_hook_body_entered"]
